change submit label

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                     aria-describedby="basic-addon1">
             </div>
 
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn btn-primary">Add Order</button>
         </form>
     </div>
 
@@ -50,7 +50,7 @@
         <table id="orders" class="table">
             <thead>
                 <tr>
-                    <th scope="col">name</th>
+                    <th scope="col">Name</th>
                     <th scope="col">Amount</th>
                     <th scope="col">Discount</th>
                     <th scope="col">Action</th>
